--- a/graduation_knn_lab.ipynb
+++ b/graduation_knn_lab.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "fb35a59c",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
     "\n",
     "    # Clean counted_pct\n",
     "    if \"counted_pct\" in df.columns:\n",
-    "        df[\"counted_pct\"] = df[\"counted_pct\"].astype(str).str.split(\"|\", expand=True)[0]\n",
+    "        df[\"counted_pct\"] = df[\"counted_pct\"].astype(str).str.split(r\"\\|\", expand=True)[0]\n",
     "        df[\"counted_pct\"] = pd.to_numeric(df[\"counted_pct\"], errors=\"coerce\") / 100.0\n",
     "\n",
     "    # Drop columns you don’t want\n",
